--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Recipes App Home</h1>    
-</body>
-</html>
+{% extends 'recipes/base.html' %}
+
+{% block content %}
+    <h1>Recipes App Home</h1>   
+    {% for recipe in recipes %} 
+    <h1>{{recipe.title}}</h1>
+    <p>{{recipe.author}} | {{recipe.date_posted}}</p>
+    {% endfor %}
+    {% endblock content %}
