--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -48,8 +48,9 @@
   </div>
 </nav>
 <div class="container mt-4 col-8">
-    {% block content %}
-    {% endblock content %}
+  {% if messages %}{% for message in messages %}
+  <div class="alert alert-{{ message.tags }}"> {{message}}</div>
+  {% endfor %}{% endif %}{% block content %}{% endblock content %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
