--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,11 +1,12 @@
 {% extends 'recipes/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
     <form method="post">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Sign Up!</legend>
-            {{ form.as_p }}  
+            {{ form|crispy }}  
             <!-- as p display as paragraph -->
         </fieldset>
         <div class="form-group py-3">
