--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -44,6 +44,19 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      <div class="navbar-nav">
+        {% if user.is_authenticated %}
+
+        <form method="post" action="{% url 'user-logout' %}">
+  {% csrf_token %}
+  <button type="submit">Logout</button>
+</form>
+<a class="nav-item nav-link" href="{% url 'user-profile' %}">My Profile</a>
+        {% else %}
+        <a class="nav-item nav-link" href="{% url 'user-login' %}">Login</a>
+        <a class="nav-item nav-link" href="{% url 'user-register' %}">Register</a>
+        {% endif %}
+      </div>
     </div>
   </div>
 </nav>
